src/objects/Chart_of_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chart of Accounts</relationshipLabel>
        <relationshipName>Chart_of_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metric</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Chart of Accounts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chart of Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart of Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>